crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__bigint.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: 123n
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: BigInt(
        "123",
    ),
}
