crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__bigint_hex.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "0xFFn"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: BigInt(
        "0xFF",
    ),
}
