crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__bool_false.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "false"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Bool(
        false,
    ),
}
