crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__bool_true.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "true"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Bool(
        true,
    ),
}
