crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__error_number_dirty_end.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: 123abc
---
Number(
    End,
    1,
    4,
)
