crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__error_number_leading_zero.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "007"
---
Number(
    NoLeadingZero,
    1,
    2,
)
