crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__error_string_bad_escape.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"\\q\""
---
String(
    Escape(
        Unknown,
    ),
    1,
    2,
)
