crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__error_string_endless.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"abc"
---
String(
    Endless,
    1,
    5,
)
