crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__error_string_newline.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"abc\ndef\"\n"
---
String(
    Newline,
    1,
    5,
)
