crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__number_exponent.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "1e3"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Number(
        NumberLit {
            value: 1000.0,
            text: "1e3",
        },
    ),
}
